2010-10-21  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #9489: powermailJS page type 3131 get indexed by index_search
	* Fixed bug #7707: wrong code in documentation
	* Fixed bug #7852: UID is not set when saved in DB (with db_entry)
	* Fixed bug #9887: [userFunc=user_powermailOnCurrentPage] breaks some extensions
	* Fixed bug #5527: Mandatory Field with Value 0 is not accepted
	* Fixed bug #8843: user_powermailOnCurrentPage failed on insert records
	* Fixed bug #7806: Back button is not working

2010-10-16  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #8045: Hook PM_FieldMarkerArrayHook not working
	* Fixed bug #8905: CSS Class "validate-one-required" is added to every radio button
	* Fixed bug #10297: TCA-Field "tx_powermail_subject_r" is not required, but will be checked in pi1
	* Fixed bug #9043: Missing class in frontend editing
	* Fixed bug #9965: It's not possible to add two class names to a field / fieldset

2010-09-22  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Follow up to task #6737: Updating Changelog.txt

2010-08-30  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #8500: Custom CSS classes not rendered for field type "Show some text"

2010-06-07  Alex Kellner  <alexander.kellner@einpraegsam.net>

	* Fixed bug #8086: userFunc user_powermailOnCurrentPage with a small bug
	
2010-05-11  Alex Kellner  <alexander.kellner@einpraegsam.net>

	* Fixed bug #7744: CSV Export without header
	* Feature #7737: Enable CSV Export via Cronjob
	* Feature #7745: Set a fix filename for cronjob export files

2010-05-02  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #7257: mimecheck fails in general with finfo_open/finfo_file
	* Feature #6502: Extension config "Activate tab dividers" has no effects
	* Task #7593: Remove conditions hich checks for TYPO3 version < 4.2.0
	* Fixed bug #5969: New Content Element Wizard in 4.3

2010-04-01  Andy Grunwald  <andreas.grunwald@wmdb.de>
